crates/lang/macro/tests/ui/trait_def/fail/invalid_selector_2.stderr
error: unknown ink! attribute (path)
 --> $DIR/invalid_selector_2.rs:5:20
  |
5 |     #[ink(message, selector)]
  |                    ^^^^^^^^
